
* Promoted Wavecycle Chorus to regular (non-developer) oscillator
    mode.

* Promoted resonz to regular (non-developer) filter mode.

* Fixed a click that occurred with several oscillator modes (Wave
    Cycle, PADsynth, and FM) when using portamento in a monophonic
    mode, due to the oscillator phase being reset spuriously.

* Added icon (32x32 only for now, not installing).

20090922 smbolton

* Added minBLEP oscillator waveform: clipped saw (thanks to Gordon
    JC Pearce for the inspiration).

* Added effect: Sean Costello's reverbsc from Csound.

* Added a few new patches to the default set, including a
    contribution from Idiomdrottning.

* Cleaned up effect common memory allocation and dirty buffer
    silencing (somewhat).

* Use new cairo-rendered knobs, when cairo is available (requires
    GTK+ >= 2.8; old knobs will be used if < 2.8 is found).

* Seriously: two consecutive copies of an inlined function that are
    not in cache can take longer to execute than two subroutine
    calls to the function's non-inlined version.  Re-thought
    WhySynth inlining.

* Debastardization of the GUI combo boxes (or, the death of
    popmenu).

* Reworked the minBLEP code for more even processor usage over
    successive process cycles.

* Consolidated some voice buffers for better cache utilization.

* On Mac OS X only (since it doesn't have a working mlockall()),
    added code at startup to page each wavetable into memory (and
    thus hopefully minimize page faults later.)

* Doh. Thread-safe, user-friendly locale flexibility.

20090531 smbolton

* Fix patchfile load and save to be locale-neutral (thanks to Martin
    Tarenskeen for the bug report.)

20090403 smbolton

* Silently ignore 'sample-rate' method.

* Fixed GtkSpinButton adjustments to avoid page_size warning with
    GTK+ >=2.14.

* configure.ac: added check for ladspa.h, removed some obsolete
    macros.

20080411 smbolton

* Use GtkFileChooserWidget instead of GtkFileSelection. Requires