@@ -296,13 +296,8 @@
 #define Y_OSCILLATOR_MODE_PD        9
 
 #define Y_OSCILLATOR_MODE_COUNT    11
-#ifdef DEVELOPER  /* -FIX- */
-#define Y_FILTER_MODE_COUNT         9
-#define Y_EFFECT_MODE_COUNT         3
-#else
 #define Y_FILTER_MODE_COUNT         7
 #define Y_EFFECT_MODE_COUNT         3
-#endif /* DEVELOPER */
 
 #define Y_MOD_ONE        0
 #define Y_MOD_MODWHEEL   1
