@@ -2547,176 +2547,6 @@ vcf_amsynth(unsigned long sample_count, y_svcf_t *svcf, y_voice_t *voice,
     vvcf->delay4 = d4;
 }
 
-#ifdef DEVELOPER  /* -FIX- */
-#define VCF_NEOSWEEP
-#ifdef VCF_NEOSWEEP
-/* vcf_neosweep
- *
- * Based on the filter from NeoSweep, this differs from the other WhySynth
- * filters in that the cutoff frequency modulation is exponential (n-per-
- * octave) rather than linear.
- *
- * This is working now, and the exponential modulation is nice.  It doesn't
- * sound that much different from the regular filters, except that it is
- * fairly smooth when modulated at high resonances --> -FIX- verify, decide
- * whether to include it or not.
- */
-static void
-vcf_neosweep(unsigned long sample_count, y_svcf_t *svcf, y_voice_t *voice,
-             struct vvcf *vvcf, float freq, float *in, float *out)
-{
-    unsigned long sample;
-    int mod;
-    float freqtmp;
-
-    float res, alpha, sine, cosine, olc, coeff_a1, coeff_b2, coeff_b1, beta, a0;
-    float a1, a2, b1, b2;
-    float v0, w0, v1, w1, v2, w2;
-
-    if (vvcf->last_mode != vvcf->mode) {
-        vvcf->last_mode = vvcf->mode;
-        v1 = w1 = v2 = w2 = 0.0f;
-    } else {
-        v1 = vvcf->delay1;
-        w1 = vvcf->delay2;
-        v2 = vvcf->delay3;
-        w2 = vvcf->delay4;
-    }
-
-    mod = y_voice_mod_index(svcf->freq_mod_src);
-    freqtmp = -2.0f + *(svcf->frequency) / 25.0f * 8.0f +            /* -2 to +6 octave frequency range */
-               6.0f * *(svcf->freq_mod_amt) * voice->mod[mod].value; /* +/- 6 octave modulation range */
-    freq = expf(logf(freq) + freqtmp * (float)M_LN2);
-    if (freq > 0.48f) freq = 0.48f;
-    else if (freq < 2e-4f) freq = 2e-4f;
-
-    res = *(svcf->qres);
-    res *= res * 128.0f;
-
-    alpha = M_2PI_F * freq;
-    sine = sinf(alpha);
-    cosine = cosf(alpha);
-    olc = 1.0f - cosine;
-
-    coeff_a1 = -(cosine + cosine);
-    coeff_b2 = olc * 0.5f;
-    /* coeff_b0 = coeff_b2; */
-    coeff_b1 = olc;
-
-    beta = sine / (0.4f * res + (float)M_SQRT2);
-    a0 = 1.0f / (1.0f + beta);
-
-    a1 = coeff_a1 * a0;
-    a2 = (1.0f - beta) * a0;
-    /* b0 = coeff_b0 * a0; */
-    b1 = coeff_b1 * a0;
-    b2 = coeff_b2 * a0;
-
-    for (sample = 0; sample < sample_count; sample++) {
-
-        v0 = in[sample];
-
-        w0 = /* b0 */ b2 * v0 +
-             b1 * v1 + b2 * v2 -
-             a1 * w1 - a2 * w2;
-
-        v2 = v1;
-        w2 = w1;
-
-        v1 = v0;
-        w1 = w0;
-
-        out[sample] = w0;
-    }
-
-    vvcf->delay1 = v1;
-    vvcf->delay2 = w1;
-    vvcf->delay3 = v2;
-    vvcf->delay4 = w2;
-}
-#endif /* VCF_NEOSWEEP */
-#define VCF_RESONR
-#ifdef VCF_RESONR
-/* vcf_resonr
- *
- * resonr from Csound ugsc.c
- *
- * An implementation of the 2-pole, 2-zero reson filter
- * described by Julius O. Smith and James B. Angell in
- * "A Constant Gain Digital Resonator Tuned by a Single
- * Coefficient," Computer Music Journal, Vol. 6, No. 4,
- * Winter 1982, p.36-39. resonr implements the version
- * where the zeros are located at + and - the square root
- * of r, where r is the pole radius of the reson filter.
- *
- * -FIX- 'resonance' knob should be labeled 'bandwidth' for this and resonz....
- */
-static void
-vcf_resonr(unsigned long sample_count, y_svcf_t *svcf, y_voice_t *voice,
-           struct vvcf *vvcf, float freq, float *in, float *out)
-{
-    unsigned long sample;
-    int mod;
-    float freqtmp, kbw;
-
-    float r, scale; /* radius & scaling factor */
-    float c1, c2;   /* filter coefficients */
-    float xn, yn, xnm1, xnm2, ynm1, ynm2;
-
-    if (vvcf->last_mode != vvcf->mode) {
-        vvcf->delay1 = 0.0f;
-        vvcf->delay2 = 0.0f;
-        vvcf->delay3 = 0.0f;
-        vvcf->delay4 = 0.0f;
-        vvcf->last_mode = vvcf->mode;
-    }
-
-    mod = y_voice_mod_index(svcf->freq_mod_src);
-    freqtmp = (*(svcf->frequency) +
-                  *(svcf->freq_mod_amt) * 50.0f * voice->mod[mod].value);
-    freq *= freqtmp;
-    if (freq > 0.48f) freq = 0.48f;
-    else if (freq < 2e-4f) freq = 2e-4f;
-
-    kbw = 1.0f - *(svcf->qres);
-    kbw = 0.5f * kbw * kbw * kbw;
-    if (kbw < 6.25e-5f) kbw = 6.25e-5f;
-
-    r = expf(-M_PI_F * kbw);
-    c1 = 2.0f * r * cosf(M_2PI_F * freq);
-    c2 = r * r;
-
-    /* calculation of scaling coefficients */
-    /* -FIX- */
-    // if (p->scaletype == 1)
-    //   scale = 1.0f - r;
-    // else if (p->scaletype == 2)
-      scale = sqrtf(1.0f - (float)r);
-    // else scale = 1.0f;
-
-    xnm1 = vvcf->delay1;
-    xnm2 = vvcf->delay2;
-    ynm1 = vvcf->delay3;
-    ynm2 = vvcf->delay4;
-
-    for (sample = 0; sample < sample_count; sample++) {
-
-        xn = in[sample];
-        out[sample] = yn = scale * (xn - r * xnm2) + c1 * ynm1 - c2 * ynm2;
-        xnm2 = xnm1;
-        xnm1 = xn;
-        ynm2 = ynm1;
-        ynm1 = yn;
-    }
-
-    vvcf->delay1 = xnm1;
-    vvcf->delay2 = xnm2;
-    vvcf->delay3 = ynm1;
-    vvcf->delay4 = ynm2;
-}
-#endif /* VCF_RESONR */
-#endif /* DEVELOPER */
-
 /* vcf_resonz
  *
  * resonz from Csound ugsc.c
@@ -2903,18 +2733,6 @@ y_voice_render(y_synth_t *synth, y_voice_t *voice,
                   deltat * voice->current_pitch,
                   vcf_source, synth->vcf1_out);
         break;
-#ifdef DEVELOPER  /* -FIX- */
-      case 9:
-        vcf_neosweep(sample_count, &synth->vcf1, voice, &voice->vcf1,
-                  deltat * voice->current_pitch,
-                  vcf_source, synth->vcf1_out);
-        break;
-      case 8:
-        vcf_resonr(sample_count, &synth->vcf1, voice, &voice->vcf1,
-                  deltat * voice->current_pitch,
-                  vcf_source, synth->vcf1_out);
-        break;
-#endif
     }
 
     switch (lrintf(*(synth->vcf2.source))) {
@@ -2969,18 +2787,6 @@ y_voice_render(y_synth_t *synth, y_voice_t *voice,
                   deltat * voice->current_pitch,
                   vcf_source, synth->vcf2_out);
         break;
-#ifdef DEVELOPER  /* -FIX- */
-      case 9:
-        vcf_neosweep(sample_count, &synth->vcf2, voice, &voice->vcf2,
-                  deltat * voice->current_pitch,
-                  vcf_source, synth->vcf2_out);
-        break;
-      case 8:
-        vcf_resonr(sample_count, &synth->vcf2, voice, &voice->vcf2,
-                  deltat * voice->current_pitch,
-                  vcf_source, synth->vcf2_out);
-        break;
-#endif
     }
 
     /* --- VCA section */
