@@ -11,6 +11,9 @@
 
 * Added icon (32x32 only for now, not installing).
 
+* Removed developer-only filters resonr (unneeded) and Neosweep
+    (unremarkable; license unclear).
+
 20090922 smbolton
 
 * Added minBLEP oscillator waveform: clipped saw (thanks to Gordon
